--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="upper-data">
-    <img src="" alt="">
-    <img src="" alt="">
+    <img src="../assets/dia-quente.jpeg" alt="sol" *ngIf="14 > 15"/>
+    <img src="../assets/dia-frio.jpeg" alt="nuvem" *ngIf=" 14 <= 15"/>
+  </div>
+  <div class="lower-data">
+
   </div>
 </div>
 
