--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,123 @@
+<div class="search">
+  <form #form="ngForm" (submit)="onSubmit()">
+    <input type="text" placeholder="Pesquisar cidade" name="city" [(ngModel)]="cittyName">
+  </form>
+</div>
+
+<div class="container" *ngIf="weatherData">
+  <div class="upper-data">
+    <img src="../assets/dia-quente.jpeg" alt="sol" *ngIf="weatherData.main.temp > 68"/>
+    <img src="../assets/dia-frio.jpeg" alt="nuvem" *ngIf=" weatherData.main.temp <= 68"/>
+    <div class="weather-data">
+      <div class="location">{{ weatherData.name }}</div>
+      <div class="temperature">{{ weatherData.main.temp | fahrenheitToCelsius }}°C</div>
+    </div>
+  </div>
+  <div class="lower-data">
+    <div class="more-info-label">
+      Mais Informações
+    </div>
+    <div class="more-info-container">
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/min.png" alt="termomentro minimo">
+          <span>min</span>
+        </div>
+        <div class="info-block-value">
+          {{ weatherData.main.temp_min | fahrenheitToCelsius }}°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/max.png" alt="termomentro máximo">
+          <span>max</span>
+        </div>
+        <div class="info-block-value">
+          {{ weatherData.main.temp_max | fahrenheitToCelsius }}°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/umidade.png" alt="umidade">
+          <span>umidade</span>
+        </div>
+        <div class="info-block-value">
+          {{ weatherData.main.humidity }}%
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/ventoso.png" alt="vento">
+          <span>vento</span>
+        </div>
+        <div class="info-block-value">
+          {{ weatherData.wind.speed }} km/h
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+<!-- 
 <div class="container">
   <div class="upper-data">
     <img src="../assets/dia-quente.jpeg" alt="sol" *ngIf="14 > 15"/>
     <img src="../assets/dia-frio.jpeg" alt="nuvem" *ngIf=" 14 <= 15"/>
+    <div class="weather-data">
+      <div class="location">São Paulo</div>
+      <div class="temperature">{{ 22.50 | number: '1.0-0' }}°C</div>
+    </div>
   </div>
   <div class="lower-data">
+    <div class="more-info-label">
+      Mais Informações
+    </div>
+    <div class="more-info-container">
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/min.png" alt="termomentro minimo">
+          <span>min</span>
+        </div>
+        <div class="info-block-value">
+          20°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/max.png" alt="termomentro máximo">
+          <span>max</span>
+        </div>
+        <div class="info-block-value">
+          29°C
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/umidade.png" alt="umidade">
+          <span>umidade</span>
+        </div>
+        <div class="info-block-value">
+          76%
+        </div>
+      </div>
+
+      <div class="info-block">
+        <div class="info-block-label">
+          <img src="../assets/ventoso.png" alt="vento">
+          <span>min</span>
+        </div>
+        <div class="info-block-value">
+          21 km/h
+        </div>
+      </div>
+    </div>
 
   </div>
 </div>
-
+-->
 <router-outlet></router-outlet>
